<resources>
    <string name="app_name">FaceRead</string>
    <string name="from_pic">Register from picture</string>
    <string name="from_video">Register from video</string>
    <string name="from_camera">Register from camera</string>
    <string name="add_face">添加</string>
    <string name="ok">提交(%1$d)</string>
    <string name="select_all">全选</string>
    <string name="alerting">alerting</string>
    <string name="disconnected">disconnected</string>
    <string name="active">active</string>
    <string name="check_password">Checking password</string>
    <string name ="ota_tile">Update download</string>
    <string name ="ota_loading">Loading</string>
    <string name="tip_for_dialpad_doorway">"Call resident：房号+#\n呼叫中心：0000+#\n密码开锁：#+密码+#\n取  消：按*键"</string>
    <string name="tip_for_dialpad_wall">"Call resident：房号+#\n呼叫中心：0000+#\n密码开锁：#+密码+#\n取  消：按*键"</string>
    <string name ="tip_for_dialpad">"按两次*开始人脸识别"</string>

    <string name ="please_input">"请按键"</string>
    <string name ="door_password">"开锁密码："</string>
    <string name ="engineering_password">"工程密码："</string>
    <string name="eight_menu_code">Please enter an 8-digit menu password</string>
    <string name="tv11">Menu 1: Volume Control</string>
    <string name="tv111">1Volume</string>
    <string name="tv12">Speech Length - Lock Delay - Button - Sound - Password - Property Card</string>
    <string name="tv21">Menu 2: Setting Menu Password</string>
    <string name="tv211">2PassWD</string>
    <string name="tv22">To set up menu password,please enter 8-digit password and press # to confirm.</string>
    <string name="tv31">Menu 3: Status Information</string>
    <string name="tv311">3Status</string>
    <string name="tv32">Step 1: Please enter 4-digit room number and press # to confirm.</string>
    <string name="tv3_2">Step 2: Please enter the interphone number and press # to confirm.</string>
    <string name="tv3_3">Step 3: Please enter a 4-digit password and press # to confirm.</string>
    <string name="tv3_4">Step 4: Please enter the direct-press intercom number and confirm it by pressing #.</string>
    <string name="tv3_5">Step 5: Please enter the designated open door number and press # to confirm.</string>
    <string name="tv41">Menu 4: Open access</string>
    <string name="tv411">4FaceID</string>
    <string name="tv42">Unused</string>
    <string name="tv51">Menu 5: Internet Settings</string>
    <string name="tv511">5InterNET</string>
    <string name="tv52">Card opening rules (0: card 1: room number 2: both)</string>
    <string name="tv53">Rule of validity (0: no validity period 1: has validity period)</string>
    <string name="tv61">Menu 6: Building Settings</string>
    <string name="tv611">6Building</string>
    <string name="tv62">Input Format: Layers/Households</string>
    <string name="tv71">Menu 7: Version</string>
    <string name="tv711">7Version</string>
    <string name="tv72">Enter the week code in [XX].</string>
    <string name="tv73">Sundays is 1,Saturdays is 7,and so on.</string>
    <string name="tv74">Version Information:</string>
    <string name="tv81">Menu 8: Restore factory settings</string>
    <string name="tv811">8Restore</string>
    <string name="tv82">Please enter a 4-digit verification code</string>
    <string name="tv91">Menu 6: Bluetooth Password</string>
    <string name="tv911">6BlueTH</string>
    <string name="tv92">Please enter a 6-digit bluetooth password</string>
    <string name="exit">Press * exit</string>
    <string name="ff">FF</string>
    <string name="time">18-05-04</string>
    <string name="user">0101</string>
    <string name="password">Password</string>
    <string name="xinghao">********</string>
    <string name="menjin">120-05-1-1-1-1</string>
    <string name="enable">(1: Enable 0: Close)</string>
    <string name="dutou">123456</string>
    <string name="factory">FFFF</string>
    <string name="ui3_code">1234</string>
    <string name="language">0LANGUAGE</string>
    <string name="android_ver">PLATFORM VERSION : 7.1.2</string>
    <string name="linux_ver">Linux localhost 4.4.126 #45 SMP PREEMPT Wed Jun 5 18:17:02 CST 2019 aarch64</string>
    <string name="kernel">Kernel Version:</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="bt_pw">Bluetooth password:</string>
    <string name="vol_ctr">Enter 1 to 6 adjust volume</string>
    <string name="static_manual">static manual model</string>
    <string name="dynamic_model">dynamic acquisition</string>
    <string name="ip">IpAddress:</string>
    <string name="mask">NetMask:</string>
    <string name="gateway">GateWay:</string>
    <string name="submit">Submit</string>
    <string name="dns">Dns:</string>
</resources>
