<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_menu"
    android:rowCount="4"
    android:columnCount="3"
    android:background="@color/background">
    <Button
        android:id="@+id/bt1"
        android:text="@string/tv111"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt2"
        android:text="@string/tv211"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt3"
        android:text="@string/tv311"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt4"
        android:text="@string/tv411"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/tv511"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/tv911"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/tv711"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/tv811"
        android:layout_width="wrap_content"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/tv611"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/language"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/exit"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_row="3"
        android:layout_column="2"
        android:gravity="center"/>
</GridLayout>